Docker: autogenerated Dockerfiles